fix: animate logo on mobile screens

--- a/src/shared/ui/logo/index.module.scss
+++ b/src/shared/ui/logo/index.module.scss
@@ -1,11 +1,13 @@
-@import '../../../app/styles/mixins';
+@use '../../../app/styles/mixins' as mixins;
+@use  '../../../app/styles/media' as media;
+
 
 .logo{
-    @include reset-link;
+    @include mixins.reset-link;
     user-select: none;
 
-
-    &:hover {
+    @include media.hover {
+        
         background: radial-gradient(circle, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%);
         background-size: 200% auto;
         background-clip: text;
@@ -17,7 +19,10 @@
             from {background-position: 0% center}         
             to {background-position: 200% center}
           }
+
     }
+
+
 
     &__text {
         color: rgb(31, 41, 55);
